[tool.poetry]
name = "fastapi-sqlalchemy2"
version = "0.1.0"
description = ""
authors = ["Sogo Kato"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
mysqlclient = "^2.1.1"
SQLAlchemy = "^2.0.1"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
